fixed contrast for date text

--- a/frontend/src/assets/css/light.css
+++ b/frontend/src/assets/css/light.css
@@ -166,6 +166,11 @@ label {
   margin: 16px 0 25px 0 !important;
 }
 
+span.end-date {
+  color: #2b3e50 !important;
+  font-weight: bold;
+}
+
 /* Pagination */
 
 .page-item {
